CADIS and FW-CADIS background

--- a/ldo-mc-vr.bib
+++ b/ldo-mc-vr.bib
@@ -68,3 +68,33 @@
   url= {https://doi.org/10.13182/NSE13-109}
 }
 
+@article{cadis,
+  title={Automated Variance Veduction of Monte Carlo Shielding Calculations using the Discrete Ordinates Adjoint Function},
+  author={Wagner, John C. and Haghighat, Alireza},
+  journal={Nuclear Science and Engineering},
+  volume={128},
+  number={2},
+  pages={186--208},
+  year={1998},
+  publisher={American Nuclear Society}
+}
+
+@inproceedings{fwcadis,
+  title={Forward-weighted CADIS Method for Variance Reduction of Monte Carlo Calculations of Distributions and Multiple Localized Quantities},
+  author={Wagner, John C. and Blakeman, Edward D. and Peplow, Douglas E.},
+  booktitle={Proceedings of the 2009 Int. Conference on Advances in Mathematics, Computational Methods, and Reactor Physics, Saratoga Springs, NY},
+  year={2009}
+}
+
+@manual{mcnp,
+	address = "Los Alamos, NM",
+	author = {{X-5 Monte Carlo Team}},
+	edition = {{Volume I: Overview and Theory}},
+	year = {2003},
+	note = " Revised 2/1/2008",
+	organization = "Los Alamos National Laboratory",
+	title = "MCNP -- A General Monte Carlo N-Particle Transport Code, Version 5",
+  number = "LA-UR-03-1987",
+  url = "https://laws.lanl.gov/vhosts/mcnp.lanl.gov/pdf_files/la-ur-03-1987.pdf"
+}
+
