--- a/ldo-mc-vr.bib
+++ b/ldo-mc-vr.bib
@@ -98,3 +98,69 @@
   url = "https://laws.lanl.gov/vhosts/mcnp.lanl.gov/pdf_files/la-ur-03-1987.pdf"
 }
 
+@techreport{advantg,
+  title={ADVANTG -- An Automated Variance Reduction Parameter Generator},
+  author={Mosher, S.W. and Johnson, S.R. and Bevill, A.M. and Ibrahim, A.M. and Daily, C.R. and Evans, T.M. and Wagner, J.C. and Johnson, J.O. and Grove, R.E.},
+  year={2015},
+  month={August},
+  institution={Oak Ridge National Laboratory},
+  number={ORNL/TM-2013/416, Rev. 1}
+}
+
+@misc{amd,
+  author = {Advanced Micro Devices Inc.},
+  title = {AMD Opteron\texttrademark\ 6300 Series Processors},
+  year = {2017},
+  howpublished = {\url{http://www.amd.com/en-us/products/server/opteron/6000/6300}}
+}
+
+@article{denovo,
+  title={{Denovo: A new three-dimensional parallel discrete ordinates code in SCALE}},
+  author={Evans, Thomas M. and Stafford, Alissa S. and Slaybaugh, Rachel N. and Clarno, Kevin T.},
+  journal={Nuclear Technology},
+  volume={171},
+  number={2},
+  pages={171--200},
+  year={2010},
+  url={https://doi.org/10.13182/NT171-171}
+}
+
+@inproceedings{ldfe,
+  title={{Discrete-Ordinates Quadrature Sets Based on Linear Discontinuous Finite Elements}},
+  author={Jarrell, Joshua J. and Adams, Marvin L.},
+  booktitle={International Conference on Mathematics and Computational Methods Applied to Nuclear Science and Engineering (M\&C 2011), Rio de Janeiro, RJ, Brazil},
+  year={2011}
+}
+
+@article{morel,
+  title={{A Hybrid Collocation-Galerkin-\sn Method for Solving the Boltzmann Transport Equation}},
+  author={Morel, J. E.},
+  journal={Nuclear Science and Engineering},
+  volume={101},
+  number={1},
+  pages={72--87},
+  year={1989}
+}
+
+@techreport{exmm,
+  title={Exnihilo Transport Methods Manuals},
+  author={Evans, Thomas and Davidson, Greg and Jarrell, Josh and Hamilton, Steven and Johnson, Seth and Pandya, Tara},
+  year={2015},
+  month={March},
+  institution={Oak Ridge National Laboratory},
+  number={CASL-U-2015-0080-000, Revision 0}
+}
+
+@techreport{exum,
+  title={Exnihilo Documentation: Release 6.2.0 (Dev)},
+  author={Evans, Thomas and Davidson, Greg and Hamilton, Steven and Johnson, Seth and Pandya, Tara},
+  year={2017},
+  institution={Oak Ridge National Laboratory}
+}
+
+@misc{savio,
+  author = {Berkeley Research Computing},
+  title = {System Overview},
+  year = {2018},
+  howpublished = {\url{http://research-it.berkeley.edu/services/high-performance-computing/system-overview}}
+}
